# conventional-commit

./: Cargo.toml  README.md  bar  conventional-commit.sh  conventionalCommit.sh  flake.nix  result
src/: collect.rs  commit.rs  main.rs
